@@ -2718,7 +2718,7 @@ data:extend({
       }
     },
     prerequisites = {
-      "sp-chemical-stager",
+      "sp-propane-products",
     },
     unit =
     {
@@ -5256,18 +5256,18 @@ data:extend({
     },
     prerequisites = {
       "sp-filter",
-      "sp-chemical-science-pack-2"
+      "sp-chemical-stager"
     },
     unit =
     {
       count = 200,
       ingredients = {
         {"sp-automation-science-pack-2", 1},
-        {"sp-logistic-science-pack-2", 1},
-        {"sp-chemical-science-pack-2", 1},
-        {"sp-electronic-science-pack-1", 1},
+        {"logistic-science-pack", 1},
+        {"chemical-science-pack", 1},
         {"sp-material-science-pack-1", 1},
         {"sp-geological-science-pack-1", 1},
+        {"sp-electronic-science-pack-1", 1},
         {"metallurgic-science-pack", 1},
         {"electromagnetic-science-pack", 1}
       },
